added more terminals

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,14 @@ main {
   vertical-align: center;
   line-height: 100vh
 }
+
+.container {
+  display: flex;
+}
+.container.space-around {
+  justify-content: space-around;
+}
+.container.space-between {  
+  justify-content: space-between;
+}
+
